--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "NCClogo.png",
+      "src": "NCClogo512.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "NCClogo.png",
+      "src": "NCClogo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
