changed homepage url for production

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://marajput123.github.io/CCSWebsiteDev",
-  "name": "ccswebsite",
+  "homepage": "https://carolinaclinicals.com/",
+  "name": "nccwebsite",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
